ecmascript/parser/tests/test262-error-references/fail/aca911e336954a5b.js.stderr
error: Invalid unicode code point
 --> $DIR/tests/test262-parser/fail/aca911e336954a5b.js:1:6
  |
1 | ("\u{110000}")
  |      ^^^^^^

